# plex-mcp-server

./: .gitignore  README.md  plex_mcp_server.py  pyproject.toml  requirements.txt
modules/: __init__.py  library.py  media.py
