[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-mcp-server"
version = "0.1.1"
description = "A Model-Context-Protocol server for interacting with Plex Media Server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "plexapi>=4.15.0",
    "starlette>=0.28.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "mcp",
    "aiohttp",
    "urllib3",
]

[project.scripts]
plex-mcp-server = "plex_mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
py-modules = ["plex_mcp_server"]
packages = ["modules"]
